Java/Week2/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
E:\bluej\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
E:\bluej\lib\bluejcore.jar;E:\bluej\lib\junit-jupiter-5.5.2.jar;E:\bluej\lib\junit-jupiter-api-5.5.2.jar;E:\bluej\lib\junit-jupiter-engine-5.5.2.jar;E:\bluej\lib\junit-jupiter-migrationsupport-5.5.2.jar;E:\bluej\lib\junit-jupiter-params-5.5.2.jar;E:\bluej\lib\junit-platform-commons-1.5.2.jar;E:\bluej\lib\junit-platform-console-1.5.2.jar;E:\bluej\lib\junit-platform-console-standalone-1.5.2.jar;E:\bluej\lib\junit-platform-engine-1.5.2.jar;E:\bluej\lib\junit-platform-launcher-1.5.2.jar;E:\bluej\lib\junit-platform-reporting-1.5.2.jar;E:\bluej\lib\junit-platform-runner-1.5.2.jar;E:\bluej\lib\junit-platform-suite-api-1.5.2.jar;E:\bluej\lib\junit-platform-testkit-1.5.2.jar;E:\bluej\lib\junit-quickcheck-core-0.9.jar;E:\bluej\lib\junit-vintage-engine-5.5.2.jar;E:\bluej\lib\hamcrest-core-1.3.jar;E:\bluej\lib\hamcrest-library-1.3.jar;E:\bluej\lib\lang-stride.jar;E:\bluej\lib\javafx\lib\javafx.base.jar;E:\bluej\lib\javafx\lib\javafx.controls.jar;E:\bluej\lib\javafx\lib\javafx.fxml.jar;E:\bluej\lib\javafx\lib\javafx.graphics.jar;E:\bluej\lib\javafx\lib\javafx.media.jar;E:\bluej\lib\javafx\lib\javafx.properties.jar;E:\bluej\lib\javafx\lib\javafx.swing.jar;E:\bluej\lib\javafx\lib\javafx.web.jar;C:\Users\Bombhu\Week2
-d
C:\Users\Bombhu\Week2\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Bombhu\Week2\nameVariable.java
<---- end of javadoc command ---->
Loading source file C:\Users\Bombhu\Week2\nameVariable.java...
C:\Users\Bombhu\Week2\nameVariable.java:9: error: reached end of file while parsing
}
 ^
1 error
